# bof-modules

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Structs.h  Win32Helper.h  bofdefs.h
src/ComExploit/: UACBypassCMSTPLUA.c  havoc_uac.py
src/ModuleStomping/: havoc.py  module_stomping.c
